# BrokenCmakeSDL

MyEngine/: CMakeLists.txt  Component.cpp  GameObject.cpp  Scene.cpp  main.cpp
MyEngine/Headers/: Component.h  GameObject.h  Scene.h
PacketManager/: CMakeLists.txt  main.cpp
TestSDL/: CMakeLists.txt  TestSDL.sln  main.cpp
TestSDL/Debug/: TestSDL.ilk
TestSDL/TestSDL/: TestSDL.vcxproj  main.cpp
TestSDL/TestSDL/Debug/: main.obj.enc  vc141.idb
TestSDL/TestSDL/Debug/TestSDL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TestSDL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
